# openturns_salome

./: CMakeLists.txt  OTPVServerManager.cxx  OTPVServerManager.hxx  OTSalomeGui.cxx  OTSalomeGui.hxx  OTViewer_ViewManager.cxx  OTViewer_ViewManager.hxx  OTViewer_Viewer.cxx  OTViewer_Viewer.hxx
cmake/: FindOTGUITemp.cmake
resources/: CMakeLists.txt  OPENTURNSCatalog.xml  OPENTURNS_msg_en.ts  SalomeApp.xml  SalomeAppSL.xml.in
test/: CMakeLists.txt  CTestTestfileInstall.cmake  driver_test.py  run_test.sh  test_basicOT.py  test_deterministic_analyses.py  test_field_analyses.py  test_probabilistic_analyses.py
tools/: CMakeLists.txt  salome_ot.py
tools/examples/: persalys_study.py  salome_ot_study.py
