# Author : Anthony Geay (EDF R&D)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8 FATAL_ERROR)

PROJECT(SalomeOpenTURNS C CXX)

CMAKE_POLICY(SET CMP0003 NEW)

SET(KERNEL_ROOT_DIR $ENV{KERNEL_ROOT_DIR} CACHE PATH "Path to the Salome KERNEL")
SET(GUI_ROOT_DIR $ENV{GUI_ROOT_DIR} CACHE PATH "Path to the Salome GUI")
SET(YACS_ROOT_DIR $ENV{YACS_ROOT_DIR} CACHE PATH "Path to the Salome YACS")
SET(OPENTURNS_HOME $ENV{OPENTURNS_HOME} CACHE PATH "Path to OpenTURNS tool")
SET(OTGUI_ROOT_DIR $ENV{OTGUI_ROOT_DIR} CACHE PATH "Path to OpenTurns GUI")
SET(CONFIGURATION_ROOT_DIR $ENV{CONFIGURATION_ROOT_DIR} CACHE PATH "Path to the Salome CMake configuration files")

IF(EXISTS ${CONFIGURATION_ROOT_DIR})
  LIST(APPEND CMAKE_MODULE_PATH "${CONFIGURATION_ROOT_DIR}/cmake")
  INCLUDE(SalomeMacros)
ELSE()
  MESSAGE(FATAL_ERROR "We absolutely need the Salome CMake configuration files, please define CONFIGURATION_ROOT_DIR !")
ENDIF()

LIST(APPEND CMAKE_MODULE_PATH "${KERNEL_ROOT_DIR}/salome_adm/cmake_files")
LIST(APPEND CMAKE_MODULE_PATH "${GUI_ROOT_DIR}/adm_local/cmake_files")
LIST(APPEND CMAKE_MODULE_PATH "${YACS_ROOT_DIR}/adm/cmake")
LIST(APPEND CMAKE_MODULE_PATH "${OPENTURNS_HOME}/lib/cmake/openturns")
LIST(APPEND CMAKE_MODULE_PATH "${OTGUI_ROOT_DIR}/lib/cmake/persalys")

INCLUDE(SalomeSetupPlatform)
SET(BUILD_SHARED_LIBS TRUE)
FIND_PACKAGE(SalomePythonInterp REQUIRED)
FIND_PACKAGE(SalomePythonLibs REQUIRED)
FIND_PACKAGE(SalomeKERNEL)
FIND_PACKAGE(SalomeGUI)
FIND_PACKAGE(SalomeYACS)
INCLUDE(PersalysConfig)
FIND_PACKAGE(Persalys)
FIND_PACKAGE(SalomeQt5 REQUIRED)

SET(_moc_HEADERS
  OTSalomeGui.hxx
  OTViewer_ViewManager.hxx
  )

QT5_WRAP_CPP(_moc_SOURCES ${_moc_HEADERS})

SET(OPENTURNS_SOURCES
  OTSalomeGui.cxx
  OTViewer_ViewManager.cxx
  OTViewer_Viewer.cxx
  OTPVServerManager.cxx
  ${_moc_SOURCES}
  )

INCLUDE_DIRECTORIES(
  ${GUI_INCLUDE_DIRS}
  ${YACS_INCLUDE_DIRS}
  ${PERSALYS_INCLUDE_DIRS}
  )

ADD_DEFINITIONS(
  -DOTGUI_HAVE_YACS
  ${QT_DEFINITIONS}
  ${PYTHON_DEFINITIONS}
  )

FIND_LIBRARY(PERSALYS_view persalysview ${PERSALYS_LIBRARY_DIRS})

ADD_LIBRARY(OPENTURNS ${OPENTURNS_SOURCES})
TARGET_LINK_LIBRARIES(OPENTURNS ${GUI_LightApp} ${PERSALYS_view})
INSTALL(TARGETS OPENTURNS DESTINATION lib/salome)

SALOME_CONFIGURE_PREPARE(Qt5)

ADD_SUBDIRECTORY(resources)
ADD_SUBDIRECTORY(tools)
#IF(SALOME_BUILD_TESTS)
    SET(SALOME_OT_INSTALL_TEST ${SALOME_INSTALL_SCRIPT_SCRIPTS}/test CACHE PATH
      "Install path: SALOME Test files")
    ADD_SUBDIRECTORY(test)
#ENDIF()
